apps/guacamole/overlays/prod/guacamole-scale-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
spec:
  replicas: 2
