apps/guacamole/overlays/prod/guacd-scale-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-guacd
spec:
  replicas: 2
