apps/guacamole/overlays/prod/storage-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: guacamole-postgresql
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
